--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
@@ -19,9 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.9.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
