--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-table": "^8.10.7",
+    "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
@@ -23,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
