--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
