--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "localforage": "^1.10.0",
+    "locomotive-scroll": "^4.1.4",
     "match-sorter": "^6.3.1",
     "preline": "^1.9.0",
     "react": "^18.2.0",
