--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.2",
     "localforage": "^1.10.0",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.294.0",
     "match-sorter": "^6.3.1",
     "preline": "^1.9.0",
     "react": "^18.2.0",
